--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "license": "ISC",
   "description": "nodejs express javascript mongodb sql",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.13",
     "nodemon": "^3.1.0",
